--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,46 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Andale Mono, monospace;
 }
 
-.main{
+.main {
   height: 100vh;
   background-color: rgb(170, 116, 116);
 }
 
-.header{
+.header {
   position: sticky;
   top: 0;
   height: 20vh;
   display: flex;
   align-items: center;
-  justify-content: space-around;  
+  justify-content: space-around;
 }
 
-.footer{
+.footer {
   background-color: rgb(119, 69, 69);
   height: 15vh;
+}
+
+.link {
+  color: black;
+  padding: 10px;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-bottom: none;
+  transition: border-bottom 1s ease;
+}
+
+.act-link {
+  color:  rgb(172, 61, 61);
+  border-bottom: solid 2.2px rgb(172, 61, 61);
+  padding: 10px;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
 }
