--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -18,7 +18,7 @@
   position: relative;
   min-height: 100vh;
   text-align: center;
-  /* padding: 80px 20px; */
+  /* padding: 5rem 1.25rem; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,32 +38,32 @@
 
 .title {
   font-size: 4rem;
-  letter-spacing: 2px;
-  margin-bottom: 10px;
+  letter-spacing: 0.125rem;
+  margin-bottom: 0.625rem;
 }
 
 .tagline {
   font-size: 1.2rem;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .hero-text {
-  max-width: 600px;
+  max-width: 37.5rem;
   font-size: 1.1rem;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 
 .hero-buttons {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .btn {
-  padding: 12px 28px;
+  padding: 0.75rem 1.75rem;
   font-size: 1rem;
-  border-radius: 30px;
+  border-radius: 1.875rem;
   cursor: pointer;
   border: none;
   transition: 0.3s ease;
@@ -76,12 +76,12 @@
 
 .btn.secondary {
   background: transparent;
-  border: 2px solid #3b2f2f;
+  border: 0.125rem solid #3b2f2f;
   color: #3b2f2f;
 }
 
 .btn:hover {
-  transform: translateY(-2px);
+  transform: translateY(-0.125rem);
   opacity: 0.9;
 }
 
@@ -89,13 +89,17 @@
 .about {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 80px 20px;
+  padding: 5rem 1.25rem;
   text-align: center;
   /* background: #fff; */
   color: #fff;
 }
 
 .rotating-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
   width: max-content;
   object-fit: cover;
   margin-left: 25%; 
@@ -107,45 +111,45 @@
 
 .about h2 {
   font-size: 2.2rem;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .about-details{
-  border: solid 1px black;
-  padding: 15px;
+  border: solid 0.063rem black;
+  padding: 0.938rem;
   height: 100%;
 }
 
 /* MENU */
 .menu-content {
-  padding: 80px 20px;
+  padding: 5rem 1.25rem;
   background: #f6f0e1;
 }
 
 .menu-content h2 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 
 .menu-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 30px;
-  max-width: 1000px;
+  grid-template-columns: repeat(auto-fit, minmax(13.75rem, 1fr));
+  gap: 1.875rem;
+  max-width: 62.5rem;
   margin: auto;
 }
 
 .menu-item {
   background: #fff;
-  padding: 25px;
-  border-radius: 12px;
+  padding: 1.563rem;
+  border-radius: 0.75rem;
   text-align: center;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.05);
 }
 
 /* FEATURED */
 .featured {
-  padding: 80px 20px;
+  padding: 5rem 1.25rem;
   text-align: center;
   background: #fff;
 }
