--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -86,12 +86,34 @@
 
 /* ABOUT */
 .about {
+  position: relative;
+  overflow: hidden;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 5rem 1.25rem;
-  text-align: center;
-  color: #fff;  
+  grid-template-columns: 1.2fr 1fr;
+  gap: 4rem;
+  padding: 5rem 3rem;
+  align-items: center;
+  color: #fff; 
 }
+
+.about::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("../../public/images/doodle.png");
+  background-repeat: repeat;
+  background-size: 100%;
+  opacity: 0.10;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.about-text,
+.about-visual {
+  position: relative;
+  z-index: 1;
+}
+
 
 .rotating-img {
   display: flex;
