--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: Andale Mono, monospace;
+    /* font-family: 'Inter', Helvetica, Arial, Lucida, sans-serif; */
 }
 
 ::-webkit-scrollbar {
