--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -156,12 +156,19 @@
 .about-description {
   padding: 0.938rem;
   height: 100%;
-  color: grey;
-  margin-bottom: 2rem;
+  color: rgb(102, 101, 101);
+  /* margin-bottom: 2rem; */
 }
 
 .about-text .btn.secondary {
   margin-left: 1rem;
+  margin-top: 2rem;
+}
+
+.about-text .btn.secondary:hover{
+   /* background-color: #876262; */
+  background-color: rgb(171, 115, 115);
+   color: #fff;
 }
 
 
