--- a/src/app/header/header.css
+++ b/src/app/header/header.css
@@ -6,6 +6,7 @@
 }
 
 .link {
+  word-spacing: -3px;
   color: black;
   padding: 10px;
   margin: 20px;
@@ -17,6 +18,7 @@
 }
 
 .act-link {
+  word-spacing: -3px;
   color: rgb(172, 61, 61);
   border-bottom: solid 2.2px rgb(172, 61, 61);
   padding: 10px;
