--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -61,7 +61,7 @@
 .btn {
   padding: 0.75rem 1.75rem;
   font-size: 1rem;
-  border-radius: 1.875rem;
+  /* border-radius: 1.875rem; */
   cursor: pointer;
   border: none;
   transition: 0.3s ease;
@@ -98,17 +98,22 @@
   padding: 5rem 5rem;
   align-items: center;
   color: black;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 
-.about::before {
+
+.content {
+  position: relative;
+}
+
+.content::before {
   content: "";
   position: absolute;
   inset: 0;
   background-image: url("../../public/images/doodle.png");
   background-repeat: repeat;
   background-size: 100%;
-  opacity: 0.10;
+  opacity: 0.08;
   z-index: 0;
   pointer-events: none;
 }
@@ -174,8 +179,6 @@
 
 
 
-
-
 /* MENU */
 
 .menu-content {
@@ -205,17 +208,11 @@
 }
 
 .menu-item {
-  border-radius: 5px;
-  background: #fff;
+  /* border-radius: 5px; */
   text-align: center;
   box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.05);
-}
-
-
-.menu-item h3{
-  margin-bottom: 0.6rem;
-  font-family: var(--poiret);
-  font-size: x-large;
+  /* background: #b7a2a1; */
+    background-color: rgb(170, 116, 116);
 }
 
 .item-details{
@@ -224,12 +221,20 @@
   text-align: left;
 }
 
+.menu-item h3{
+  color: #fff;
+  margin-bottom: 0.6rem;
+  font-family: var(--poiret);
+  font-size: x-large;
+}
+
+
 .menu-item p{
+  color: #fff;
   font-family: var(--poiret);
   font-size: large;
   font-weight: 500;
 } 
-
 
 
 .item-detail {
@@ -237,6 +242,7 @@
 }
 
 .menu-image {
+  /* border-radius: 3px; */
   width: 100%;
   height: auto;
 }
