--- a/src/app/story/story.css
+++ b/src/app/story/story.css
@@ -27,13 +27,16 @@
 }
 
 .story-text h1 {
-  font-size: 4rem;
+  font-family: var(--lavish);
+  font-size: 6rem;
   letter-spacing: 0.15rem;
+  text-shadow: 4px 4px 5px rgb(60, 59, 59);
 }
 
 .story-text p {
   font-size: 1.2rem;
   margin-top: 1rem;
+  text-shadow: 4px 4px 5px rgb(60, 59, 59);
 }
 
 /* STORY SECTIONS */
@@ -45,7 +48,7 @@
   align-items: center;
   opacity: 0;
   transform: translateY(60px);
-  transition: all 1s ease;
+  transition: all 0.5s ease;
 }
 
 .story-section.visible {
@@ -71,7 +74,7 @@
 .story-image img {
   object-fit: cover;
   transform: scale(1.1);
-  transition: transform 1.5s ease;
+  transition: transform 0.5s ease;
 }
 
 .story-section.visible .story-image img {
@@ -80,8 +83,11 @@
 
 /* TEXT */
 .story-content h2 {
+  font-family: var(--lavish);
   font-size: 2.4rem;
   margin-bottom: 1rem;
+  /* text-decoration: underline;
+  text-underline-offset: 10px; */
 }
 
 .story-content p {
