--- a/src/app/book/book.css
+++ b/src/app/book/book.css
@@ -43,7 +43,6 @@
   margin: auto;
   background: #ffffff;
   padding: 4rem;
-  /* border-radius: 24px; */
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
 }
 
@@ -103,7 +102,7 @@
   padding: 1rem;
   margin-left: 30%;
   border: 1px solid black;
-  background: #af8888; 
+  background: #b28282; 
   color: white;
   font-size: 1rem;
   cursor: pointer;
